<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupNamesActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/proceed"
        android:textColor="@color/buttonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/playerNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="1"
        android:textSize="144sp"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/playerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:hint="@string/write_name"
        android:maxLength="15"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/continueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginBottom="40dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/playerName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/playerNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintDimensionRatio="1"
        android:layout_margin="32dp"
        android:background="@drawable/ic_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.AppCompatImageButton>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/piano"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintDimensionRatio="1"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_piano"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="@id/info"
        app:layout_constraintEnd_toEndOf="@id/info"
        app:layout_constraintTop_toBottomOf="@+id/info">

    </androidx.appcompat.widget.AppCompatImageButton>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/cross"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="@id/piano"
        app:layout_constraintStart_toStartOf="@id/piano"
        app:layout_constraintTop_toTopOf="@id/piano"
        app:layout_constraintBottom_toBottomOf="@id/piano">

    </androidx.appcompat.widget.AppCompatImageView>

</androidx.constraintlayout.widget.ConstraintLayout>