<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupRoundActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/roundNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="5"
        android:textSize="120sp"
        app:layout_constraintBottom_toTopOf="@+id/howManyRounds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/howManyRounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_many_rounds"
        android:textSize="16sp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/roundNumberSeekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/roundNumberSeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="24dp"
        android:max="9"
        android:progress="3"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

    </androidx.appcompat.widget.AppCompatSeekBar>

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

    </View>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/playerNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="6"
        android:textSize="120sp"
        app:layout_constraintBottom_toTopOf="@+id/howManyPlayers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/howManyPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/how_many_players"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/playerNumberSeekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/playerNumberSeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="9"
        android:progress="3"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/continueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

    </androidx.appcompat.widget.AppCompatSeekBar>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/proceed"
        android:textColor="@color/buttonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintDimensionRatio="1"
        android:layout_margin="32dp"
        android:background="@drawable/ic_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.AppCompatImageButton>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/piano"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintDimensionRatio="1"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_piano"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="@id/info"
        app:layout_constraintEnd_toEndOf="@id/info"
        app:layout_constraintTop_toBottomOf="@+id/info">

    </androidx.appcompat.widget.AppCompatImageButton>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/cross"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="@id/piano"
        app:layout_constraintStart_toStartOf="@id/piano"
        app:layout_constraintTop_toTopOf="@id/piano"
        app:layout_constraintBottom_toBottomOf="@id/piano">

    </androidx.appcompat.widget.AppCompatImageView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/gears"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_gears"
        android:padding="1dp"
        app:layout_constraintEnd_toEndOf="@id/piano"
        app:layout_constraintStart_toStartOf="@id/piano"
        app:layout_constraintTop_toBottomOf="@id/piano"
        app:layout_constraintDimensionRatio="1">

    </androidx.appcompat.widget.AppCompatImageView>
    
</androidx.constraintlayout.widget.ConstraintLayout>